--- a/index.html
+++ b/index.html
@@ -380,9 +380,9 @@
           <div class="col-lg-3">
             <div class="about-item">
               <div class="card border-0">
-                <img class="rounded-circle" src="imag/IMG_20170221_090734-10.jpg" alt="">
+                <img class="rounded-circle" src="imag/face1.jpg" alt="">
                 <div class="card-body">
-                  <h4 class="card-title">Priya Khan</h4>
+                  <h4 class="card-title">Jason Doe</h4>
                   <h6 class="card-subtitle mb-3">Designer</h6>
                   <p class="card-text mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                   <a class="btn btn-light shadow mb-4" href="#">Website</a>
